# lecture-testing-task

./: .gitignore
05_hw/: CMakeLists.txt  benchmark.cpp  stack.c  tests.cpp
